added tailwind css

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,8 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<h1>heloo tony
-	</h1>
+	<h1 class="text-3xl bg-red-600
+	 font-bold underline">
+		Hello world!
+	  </h1>
 </Layout>
