--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,4 @@
 ---
-import Navbar from "../components/Navbar.astro";
-import Footer from "../components/Footer.astro";
 
 const { title } = Astro.props;
 ---
@@ -21,10 +19,10 @@ const { title } = Astro.props;
     />
   </head>
   <body>
-    <Navbar />
+    <!-- <Navbar /> -->
     <main>
       <slot />
     </main>
-    <Footer />
+    <!-- <Footer /> -->
   </body>
 </html>
