--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-
+import Navbar from "../components/Navbar.astro";
 const { title } = Astro.props;
 ---
 
@@ -19,7 +19,7 @@ const { title } = Astro.props;
     />
   </head>
   <body>
-    <!-- <Navbar /> -->
+    <Navbar />
     <main>
       <slot />
     </main>
