--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Hero from '../components/Hero.astro';
 ---
 
 <Layout>
-	<h1 class="text-3xl bg-red-600
-	 font-bold underline">
-		Hello world!
-	  </h1>
+	<Hero />
+	
 </Layout>
