--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{title || "IntoDetailing"}</title>
+    <title>{title || "ANTONY KIPKORIR"}</title>
     <!-- <link rel="stylesheet" href="/styles/global.css"> -->
     <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.0/css/bootstrap.min.css">
@@ -19,7 +19,7 @@ const { title } = Astro.props;
     />
   </head>
   <body>
-    <Navbar />
+    <!-- <Navbar /> -->
     <main>
       <slot />
     </main>
