--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Hero from '../components/Hero.astro';
+import Navbar from '../components/Navbar.astro';
 ---
 
 <Layout>
-	<Hero />
+	<Navbar />
+	<!-- <Hero /> -->
 	
 </Layout>
