--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,15 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.astro';
+import  Hero from '../components/Hero.astro';
+import AboutMe from '../components/AboutMe.astro';
+import PortfolioSection from '../components/PortfolioSection.astro'
 ---
 
 <Layout>
 	<Navbar />
-	<!-- <Hero /> -->
+	<Hero />
+	<AboutMe />
+	<PortfolioSection />
 	
 </Layout>
