--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -68,7 +68,7 @@
     <!-- Profile Image -->
     <div class="flex justify-center">
       <img
-        src="../src/assets/Tony.jpg"
+        src="/assets/Tony.jpg"
         alt="Antony Kiplagat Profile"
         class="rounded-3xl border-4 border-white shadow-xl h-[60vh] object-cover object-center animate-subtle-float"
       />
