--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 
-const myIntroduction = "I'm a passionate software developer with a knack for creating elegant and efficient solutions. With over 3 years of experience in web development and cloud-native applications, I thrive on tackling complex challenges and continuously learning new technologies. My goal is to leverage my skills to build impactful software that makes a difference.";
+const myIntroduction = "I'm a passionate software developer with a passion  for creating elegant and efficient solutions. With over 3 years of experience in web development and cloud-native applications, I thrive on tackling complex challenges and continuously learning new technologies. My goal is to leverage my skills to build impactful software that makes a difference.";
 
 const mySkills = [
   "JavaScript (ES6+)",
